# simple_blockchain

./: .gitignore  blockchain.py  pyproject.toml
api/: app.py
api/core/schema/: blockchain.py  mine.py  transaction.py
api/routes/: main.py
blockchain/: blockchain.py
tests/blockchain/: conftest.py  test_blockchain.py
