[tool.poetry]
name = "simple-blockchain"
version = "0.1.0"
description = "Just an implementation of simple blockchain"
authors = ["Ivan Zakutnii <zakutnii.ivan@gmail.com>"]
license = "WTFPL"
readme = "README.md"
packages = [{include = "simple_blockchain"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
